--- a/about.html
+++ b/about.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Annabel Morales Portfolio</title>
-    <link rel="stylesheet" href="css/main.css">
+    <title>Annabel Morales|About</title>
 </head>
 <body>
     
@@ -23,13 +22,7 @@
     <section>
         <h2>Hello, I'm a Web Designer and UX/UI Designer</h2>
         <p>My name is Annabel Morales and I am an undergraduate student. I have learned many skills regarding web design/development and ux/ui design in the past two years. I also have knowledge in photography and digital media. My skills and strengths can be seen in my projects.</p>
-    </section>
-
-    <section>
-        <h2>My Projects</h2>
-        <div class="carousel">
-
-        </div>
+        <img src="" alt="">
     </section>
 
     <footer>
