--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
         </nav>
     </header>
 
-    <section>
-        <h2>Hello, I'm a Web Designer and UX/UI Designer</h2>
-        <p>My name is Annabel Morales and I am an undergraduate student. I have learned many skills regarding web design/development and ux/ui design in the past two years. I also have knowledge in photography and digital media. My skills and strengths can be seen in my projects.</p>
-    </section>
-
-    <section>
-        <h2>My Projects</h2>
-        <div class="carousel">
-
-        </div>
-    </section>
+    <main>
+        <section>
+            <h2>Hello, I'm a Web Designer and UX/UI Designer</h2>
+            <p>My name is Annabel Morales and I am an undergraduate student. I have learned many skills regarding web design/development and ux/ui design in the past two years. I also have knowledge in photography and digital media. My skills and strengths can be seen in my projects.</p>
+        </section>
+    
+        <section>
+            <h2>My Projects</h2>
+            <div class="carousel">
+    
+            </div>
+        </section>
+    </main>
 
     <footer>
         <nav class="footer-nav">
