--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,37 @@
         </nav>
     </header>
 
-    
+    <main>
+        <h2>My Projects</h2>
+
+        <div class="">
+            <div>
+                <img src="" alt="">
+                <h3>Media Player</h3>
+                <p>This is a project focusing on using captions, triggers on time stamps. video, and audio.</p>
+                <button><a href="">View Details</a></button>
+            </div>
+
+            <div>
+                <img src="" alt="">
+                <h3>Custom Web App</h3>
+                <p>This is a fun project creating a recipe generator based on category filters.</p>
+                <button><a href="">View Details</a></button>
+            </div>
+
+            <div>
+                <img src="" alt="">
+                <h3>Marianas Trench</h3>
+                <p>This is a reimaged website using content from the Marainas Trench National Monument website.</p>
+                <button><a href="">View Details</a></button>
+            </div>
+
+            <div>
+                <img src="" alt="">
+                <h3></h3>
+            </div>
+        </div>
+    </main>
 
 </body>
 </html>
