--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Annabel Morales|Projects</title>
+    <title>Projects - Annabel Morales</title>
 </head>
 <body>
 
