--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Annabel Morales</title>
+    <title>Contact - Annabel Morales</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -22,14 +22,23 @@
 
     <main>
         <section>
-            <h2>Hello, I'm a Web Designer and UX/UI Designer</h2>
-            <p>My name is Annabel Morales and I am an undergraduate student. I have learned many skills regarding web design/development and ux/ui design in the past two years. I also have knowledge in photography and digital media. My skills and strengths can be seen in my projects.</p>
-        </section>
-    
-        <section>
-            <h2>My Projects</h2>
-            <div class="carousel">
-    
+            <h2>Contact Me</h2>
+            <div class="form">
+                <form action="contact_page.php">
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" name="firstname">
+
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" name="lastname">
+
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email">
+
+                    <label for="message">Message</label>
+                    <textarea type="text" id="message" name="message"></textarea>
+
+                    <input type="submit" value="Submit">
+                </form>
             </div>
         </section>
     </main>
