--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
         <h1>Annabel Morales</h1>
         <nav class="header-nav">
             <ul class="header-ul">
-                <li class="header-li"><a href="">Home</a></li>
-                <li class="header-li"><a href="">About</a></li>
-                <li class="header-li"><a href="">Projects</a></li>
-                <li class="header-li"><a href="">Contact</a></li>
+                <li class="header-li"><a class="active" href="">Home</a></li>
+                <li class="header-li"><a class="inactive" href="">About</a></li>
+                <li class="header-li"><a class="inactive" href="">Projects</a></li>
+                <li class="header-li"><a class="inactive" href="">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="welcome">
-            <h2>Hello, I'm a Web Designer and UX/UI Designer</h2>
-            <p>My name is Annabel Morales and I am an undergraduate student. I have learned many skills regarding web design/development and ux/ui design in the past two years. I also have knowledge in photography and digital media. My skills and strengths can be seen in my projects.</p>
+            <h2>Web Design & Development · UI/UX Design · Graphic Design </h2>
+            <div class="flex"> 
+                <p>My name is Annabel Morales and I am an undergraduate student. I have learned many skills regarding web design/development, ux/ui design, and graphic design in the past two years. I also have knowledge and experience in photography and digital media. My skills and strengths can be seen in my projects.</p>
+            
+                <img class="memoji" src="images/memoji.png" alt="My Memoji">
+            </div>
         </section>
     
         <section>
@@ -35,6 +39,7 @@
             <div class="slider">
                 <div class="item">
                     <img src="images/image.jpg" alt="">
+                    <p>fd</p>
                 </div>
                 <div class="item">
                     <img src="images/image.jpg" alt="">
