--- a/index.html
+++ b/index.html
@@ -38,23 +38,32 @@
 
             <div class="slider">
                 <div class="item">
-                    <img src="images/image.jpg" alt="">
-                    <p>fd</p>
+                    <img src="images/app1.png" alt="Preview of Culinary Roulette Web Page">
+                    <figcaption><a href="project1.html">Culinary Roulette</a></figcaption>
                 </div>
                 <div class="item">
-                    <img src="images/image.jpg" alt="">
+                    <img src="images/pawsome1.png" alt="Preview of Pawsome Eats Project Brief">
+                    <figcaption><a href="project2.html">Pawsome Eats</a></figcaption>
                 </div>
                 <div class="item">
-                    <img src="images/image.jpg" alt="">
+                    <img src="images/book1.png" alt="Preview of Book Cover Project">
+                    <figcaption><a href="project3.html">Book Cover Project</a></figcaption>
                 </div>
                 <div class="item">
-                    <img src="images/image.jpg" alt="">
+                    <img src="images/bnb1.png" alt="Preview of Bed and Breakfast Website">
+                    <figcaption><a href="project4.html">Bed and Breakfast</a></figcaption>
                 </div>
                 <div class="item">
-                    <img src="images/image.jpg" alt="">
+                    <img src="images/noted1.png" alt="Preview of Noted Project Brief">
+                    <figcaption><a href="project5.html">Noted</a></figcaption>
                 </div>
                 <div class="item">
-                    <img src="images/image.jpg" alt="">
+                    <img src="images/zine1.png" alt="Preview of Zine Comic">
+                    <figcaption><a href="project6.html">Zine Comic</a></figcaption>
+                </div>
+                <div class="item">
+                    <img src="images/media1.png" alt="Preview of Media Player Webpage">
+                    <figcaption><a href="project7.html">Media Player</a></figcaption>
                 </div>
             </div>
             
@@ -85,7 +94,6 @@
             infinite: true,
             centerMode: true,
             centerPadding: "0",
-
             });})
     </script>
 </body>
