--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h1>Annabel Morales</h1>
         <nav class="header-nav">
             <ul class="header-ul">
-                <li class="header-li"><a class="active" href="">Home</a></li>
-                <li class="header-li"><a class="inactive" href="">About</a></li>
-                <li class="header-li"><a class="inactive" href="">Projects</a></li>
-                <li class="header-li"><a class="inactive" href="">Contact</a></li>
+                <li class="header-li"><a class="active" href="index.html">Home</a></li>
+                <li class="header-li"><a class="inactive" href="about.html">About</a></li>
+                <li class="header-li"><a class="inactive" href="projects.html">Projects</a></li>
+                <li class="header-li"><a class="inactive" href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -71,12 +71,13 @@
     </main>
 
     <footer>
+        <h3>Site Map</h3>
         <nav class="footer-nav">
             <ul class="footer-ul">
-                <li class="footer-li"><a href="">Home</a></li>
-                <li class="footer-li"><a href="">About</a></li>
-                <li class="footer-li"><a href="">Projects</a></li>
-                <li class="footer-li"><a href="">Contact</a></li>
+                <li class="footer-li"><a href="index.html">Home</a></li>
+                <li class="footer-li"><a href="about.html">About</a></li>
+                <li class="footer-li"><a href="projects.html">Projects</a></li>
+                <li class="footer-li"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </footer>
