--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Annabel Morales</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     
@@ -11,29 +12,33 @@
         <h1>Annabel Morales</h1>
         <nav class="header-nav">
             <ul class="header-ul">
-                <li class="header-li"><a href="">Home</a></li>
-                <li class="header-li"><a href="">About</a></li>
-                <li class="header-li"><a href="">Projects</a></li>
-                <li class="header-li"><a href="">Contact</a></li>
+                <li class="header-li"><a class="active" href="index.html">Home</a></li>
+                <li class="header-li"><a class="inactive" href="about.html">About</a></li>
+                <li class="header-li"><a class="inactive" href="projects.html">Projects</a></li>
+                <li class="header-li"><a class="inactive" href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section>
-            <h2>Hello, I'm a Web Designer and UX/UI Designer</h2>
-            <p>My name is Annabel Morales and I am an undergraduate student. I have learned many skills regarding web design/development and ux/ui design in the past two years. I also have knowledge in photography and digital media. My skills and strengths can be seen in my projects.</p>
-            <img src="" alt="">
+        <section class="welcome">
+            <h2>Learn More About Me</h2>
+            <div class="flex"> 
+                <p>My name is Annabel Morales and I am an undergraduate student. I have learned many skills regarding web design/development, ux/ui design, and graphic design in the past two years. I also have knowledge and experience in photography and digital media. My skills and strengths can be seen in my projects.</p>
+            
+                <img class="memoji" src="images/memoji.png" alt="My Memoji">
+            </div>
         </section>
     </main>
 
     <footer>
+        <h3>Site Map</h3>
         <nav class="footer-nav">
             <ul class="footer-ul">
-                <li class="footer-li"><a href="">Home</a></li>
-                <li class="footer-li"><a href="">About</a></li>
-                <li class="footer-li"><a href="">Projects</a></li>
-                <li class="footer-li"><a href="">Contact</a></li>
+                <li class="footer-li"><a href="index.html">Home</a></li>
+                <li class="footer-li"><a href="about.html">About</a></li>
+                <li class="footer-li"><a href="projects.html">Projects</a></li>
+                <li class="footer-li"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </footer>
