--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Annabel Morales</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
@@ -11,45 +12,83 @@
         <h1>Annabel Morales</h1>
         <nav class="header-nav">
             <ul class="header-ul">
-                <li class="header-li"><a href="">Home</a></li>
-                <li class="header-li"><a href="">About</a></li>
-                <li class="header-li"><a href="">Projects</a></li>
-                <li class="header-li"><a href="">Contact</a></li>
+                <li class="header-li"><a class="active" href="index.html">Home</a></li>
+                <li class="header-li"><a class="inactive" href="about.html">About</a></li>
+                <li class="header-li"><a class="inactive" href="projects.html">Projects</a></li>
+                <li class="header-li"><a class="inactive" href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
+        <section class="welcome">
         <h2>My Projects</h2>
 
-        <div class="">
-            <div>
-                <img src="" alt="">
-                <h3>Media Player</h3>
-                <p>This is a project focusing on using captions, triggers on time stamps. video, and audio.</p>
-                <button><a href="">View Details</a></button>
-            </div>
-
-            <div>
-                <img src="" alt="">
+        <div class="grid">
+            <div class="card">
+                <img src="images/app1.png" alt="Preview of Culinary Roulette Web Page">
                 <h3>Custom Web App</h3>
                 <p>This is a fun project creating a recipe generator based on category filters.</p>
                 <button><a href="">View Details</a></button>
             </div>
 
-            <div>
-                <img src="" alt="">
-                <h3>Marianas Trench</h3>
-                <p>This is a reimaged website using content from the Marainas Trench National Monument website.</p>
+            <div class="card">
+                <img src="images/pawsome1.png" alt="Preview of Pawsome Eats Project Brief">
+                <h3>Pawsome Eats App</h3>
+                <p>This is app idea that provides recipes for dog and cat owners for their pets. This project includes a pitch deck, an app prototype, and a support website.</p>
                 <button><a href="">View Details</a></button>
             </div>
 
-            <div>
-                <img src="" alt="">
-                <h3></h3>
+            <div class="card">
+                <img src="images/book1.png" alt="Preview of Book Cover Project">
+                <h3>Book Cover Project</h3>
+                <p>This is a reimaged book cover project of <i>Alice's Adventures in Wonderland</i> by Lewis Carrol.</p>
+                <button><a href="">View Details</a></button>
             </div>
+
+            <div class="card">
+                <img src="images/bnb1.png" alt="Preview of Bed and Breakfast Website">
+                <h3>Noah Franklin Homestead - Bed and Breakfast</h3>
+                <p>This is a multi-page website for a fictional bed and breakfast inn.</p>
+                <button><a href="">View Details</a></button>
+            </div>
+
+            <div class="card">
+                <img src="images/noted1.png" alt="Preview of Noted Project Brief">
+                <h3>Noted</h3>
+                <p>This is an app idea providing a student-focused calendar and planner. This project includes a pitch deck and an app protote.</p>
+                <button><a href="">View Details</a></button>
+            </div>
+
+            <div class="card">
+                <img src="images/zine1.png" alt="Preview of Zine Comic">
+                <h3>Book Zine</h3>
+                <p>This is book zine I created that explores popular folklore in Latin America. This project was created using paper-to-digital illustrations and various tools on Adobe Illustrator.</p>
+                <button><a href="">View Details</a></button>
+            </div>
+
+            <div class="card">
+                <img src="images/media1.png" alt="Preview of Media Player Webpage">
+                <h3>Media Player</h3>
+                <p>This is a project focusing on using captions, triggers on time stamps, video, and audio.</p>
+                <button><a href="">View Details</a></button>
+            </div>
+            
         </div>
+        </section>
     </main>
+
+    <footer>
+        <h4>Site Map</h4>
+        <nav class="footer-nav">
+            <ul class="footer-ul">
+                <li class="footer-li"><a href="index.html">Home</a></li>
+                <li class="footer-li"><a href="about.html">About</a></li>
+                <li class="footer-li"><a href="projects.html">Projects</a></li>
+                <li class="footer-li"><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 </html>
