--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
         <h1>Annabel Morales</h1>
         <nav class="header-nav">
             <ul class="header-ul">
-                <li class="header-li"><a class="active" href="index.html">Home</a></li>
-                <li class="header-li"><a class="inactive" href="about.html">About</a></li>
+                <li class="header-li"><a class="inactive" href="index.html">Home</a></li>
+                <li class="header-li"><a class="active" href="about.html">About</a></li>
                 <li class="header-li"><a class="inactive" href="projects.html">Projects</a></li>
                 <li class="header-li"><a class="inactive" href="contact.html">Contact</a></li>
             </ul>
