--- a/projects.html
+++ b/projects.html
@@ -12,9 +12,9 @@
         <h1>Annabel Morales</h1>
         <nav class="header-nav">
             <ul class="header-ul">
-                <li class="header-li"><a class="active" href="index.html">Home</a></li>
+                <li class="header-li"><a class="inactive" href="index.html">Home</a></li>
                 <li class="header-li"><a class="inactive" href="about.html">About</a></li>
-                <li class="header-li"><a class="inactive" href="projects.html">Projects</a></li>
+                <li class="header-li"><a class="active" href="projects.html">Projects</a></li>
                 <li class="header-li"><a class="inactive" href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -28,50 +28,64 @@
             <div class="card">
                 <img src="images/app1.png" alt="Preview of Culinary Roulette Web Page">
                 <h3>Custom Web App</h3>
-                <p>This is a fun project creating a recipe generator based on category filters.</p>
-                <button><a href="">View Details</a></button>
+                <div class="flex">
+                    <p>This is a fun project creating a recipe generator based on category filters.</p>
+                    <button><a href="project1.html">View Details</a></button>
+                </div>
             </div>
 
             <div class="card">
                 <img src="images/pawsome1.png" alt="Preview of Pawsome Eats Project Brief">
                 <h3>Pawsome Eats App</h3>
-                <p>This is app idea that provides recipes for dog and cat owners for their pets. This project includes a pitch deck, an app prototype, and a support website.</p>
-                <button><a href="">View Details</a></button>
+                <div class="flex">
+                    <p>This is app idea that provides recipes for dog and cat owners for their pets. This project includes a pitch deck, an app prototype, and a support website.</p>
+                    <button><a href="project2.html">View Details</a></button>
+                </div>
             </div>
 
             <div class="card">
                 <img src="images/book1.png" alt="Preview of Book Cover Project">
                 <h3>Book Cover Project</h3>
-                <p>This is a reimaged book cover project of <i>Alice's Adventures in Wonderland</i> by Lewis Carrol.</p>
-                <button><a href="">View Details</a></button>
+                <div class="flex">
+                    <p>This is a reimaged book cover project of <i>Alice's Adventures in Wonderland</i> by Lewis Carrol.</p>
+                    <button><a href="project3.html">View Details</a></button>
+                </div>
             </div>
 
             <div class="card">
                 <img src="images/bnb1.png" alt="Preview of Bed and Breakfast Website">
                 <h3>Noah Franklin Homestead - Bed and Breakfast</h3>
-                <p>This is a multi-page website for a fictional bed and breakfast inn.</p>
-                <button><a href="">View Details</a></button>
+                <div class="flex">
+                    <p>This is a multi-page website for a fictional bed and breakfast inn.</p>
+                    <button><a href="project4.html">View Details</a></button>
+                </div>
             </div>
 
             <div class="card">
                 <img src="images/noted1.png" alt="Preview of Noted Project Brief">
                 <h3>Noted</h3>
-                <p>This is an app idea providing a student-focused calendar and planner. This project includes a pitch deck and an app protote.</p>
-                <button><a href="">View Details</a></button>
+                <div class="flex">
+                    <p>This is an app idea providing a student-focused calendar and planner. This project includes a pitch deck and an app prototype.</p>
+                    <button><a href="project5.html">View Details</a></button>
+                </div>
             </div>
 
             <div class="card">
                 <img src="images/zine1.png" alt="Preview of Zine Comic">
                 <h3>Book Zine</h3>
-                <p>This is book zine I created that explores popular folklore in Latin America. This project was created using paper-to-digital illustrations and various tools on Adobe Illustrator.</p>
-                <button><a href="">View Details</a></button>
+                <div class="flex">
+                    <p>This is book zine I created that explores popular folklore in Latin America. This project was created using paper-to-digital illustrations and various tools on Adobe Illustrator.</p>
+                    <button><a href="project5.html">View Details</a></button>
+                </div>
             </div>
 
             <div class="card">
                 <img src="images/media1.png" alt="Preview of Media Player Webpage">
                 <h3>Media Player</h3>
-                <p>This is a project focusing on using captions, triggers on time stamps, video, and audio.</p>
-                <button><a href="">View Details</a></button>
+                <div class="flex">
+                    <p>This is a project focusing on using captions, triggers on time stamps, video, and audio.</p>
+                    <button><a href="project6.html">View Details</a></button>
+                </div>
             </div>
             
         </div>
