--- a/contact.html
+++ b/contact.html
@@ -12,30 +12,31 @@
         <h1>Annabel Morales</h1>
         <nav class="header-nav">
             <ul class="header-ul">
-                <li class="header-li"><a href="">Home</a></li>
-                <li class="header-li"><a href="">About</a></li>
-                <li class="header-li"><a href="">Projects</a></li>
-                <li class="header-li"><a href="">Contact</a></li>
+                <li class="header-li"><a class="inactive" href="index.html">Home</a></li>
+                <li class="header-li"><a class="inactive" href="about.html">About</a></li>
+                <li class="header-li"><a class="inactive" href="projects.html">Projects</a></li>
+                <li class="header-li"><a class="active" href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section>
+        <section class="welcome">
+
             <h2>Contact Me</h2>
             <div class="form">
                 <form action="contact_page.php">
-                    <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="firstname">
+                    <label for="fname">Full Name <span>*</span></label>
+                    <input  type="text" id="fname" name="fullname" required>
+                    
+                    <label for="email">Email <span>*</span></label>
+                    <input type="email" id="email" name="email" required>
 
-                    <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname">
+                    <label for="subject">Subject <span>*</span></label>
+                    <input type="text" id="subject" name="subject" required>
 
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email">
-
-                    <label for="message">Message</label>
-                    <textarea type="text" id="message" name="message"></textarea>
+                    <label for="message">Message <span>*</span></label>
+                    <textarea type="text" id="message" name="message" required></textarea>
 
                     <input type="submit" value="Submit">
                 </form>
@@ -44,12 +45,13 @@
     </main>
 
     <footer>
+        <h4>Site Map</h4>
         <nav class="footer-nav">
             <ul class="footer-ul">
-                <li class="footer-li"><a href="">Home</a></li>
-                <li class="footer-li"><a href="">About</a></li>
-                <li class="footer-li"><a href="">Projects</a></li>
-                <li class="footer-li"><a href="">Contact</a></li>
+                <li class="footer-li"><a href="index.html">Home</a></li>
+                <li class="footer-li"><a href="about.html">About</a></li>
+                <li class="footer-li"><a href="projects.html">Projects</a></li>
+                <li class="footer-li"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </footer>
