--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 </div>
                 <div class="item">
                     <img src="images/book1.png" alt="Preview of Book Cover Project">
-                    <figcaption><a href="project3.html">Book Cover Project</a></figcaption>
+                    <figcaption><a href="project3.html">Book Cover</a></figcaption>
                 </div>
                 <div class="item">
                     <img src="images/bnb1.png" alt="Preview of Bed and Breakfast Website">
-                    <figcaption><a href="project4.html">Bed and Breakfast</a></figcaption>
+                    <figcaption><a href="project4.html">Noah Franklin Homestead</a></figcaption>
                 </div>
                 <div class="item">
                     <img src="images/noted1.png" alt="Preview of Noted Project Brief">
@@ -58,7 +58,7 @@
                 </div>
                 <div class="item">
                     <img src="images/zine1.png" alt="Preview of Zine Comic">
-                    <figcaption><a href="project6.html">Zine Comic</a></figcaption>
+                    <figcaption><a href="project6.html">Book Zine</a></figcaption>
                 </div>
                 <div class="item">
                     <img src="images/media1.png" alt="Preview of Media Player Webpage">
