fixed nav drop down

--- a/index.html
+++ b/index.html
@@ -13,12 +13,21 @@
     <header>
         <h1>Annabel Morales</h1>
         <nav class="header-nav">
-            <ul class="header-ul">
-                <li class="header-li"><a class="active" href="index.html">Home</a></li>
-                <li class="header-li"><a class="inactive" href="about.html">About</a></li>
-                <li class="header-li"><a class="inactive" href="projects.html">Projects</a></li>
-                <li class="header-li"><a class="inactive" href="contact.html">Contact</a></li>
-            </ul>
+            <a class="header-li active" href="index.html">Home</a>
+            <a class="header-li inactive" href="about.html">About</a>
+            <div class="dropdown">
+                <a class="header-li inactive dropdown-btn" href="projects.html">Projects</a>
+                <div class="dropdown-menu">
+                    <a class="off project" href="project1.html">Culinary Roulette</a>
+                    <a class="off project" href="project2.html">Pawsome Eats</a>
+                    <a class="off project" href="project3.html">Book Cover</a>
+                    <a class="off project" href="project4.html">Noah Franklin...</a>
+                    <a class="off project" href="project5.html">Noted</a>
+                    <a class="off project" href="project6.html">The Mysterious...</a>
+                    <a class="off project" href="project7.html">Media Player</a>
+                </div>
+            </div>
+            <a class="header-li inactive" href="contact.html">Contact</a>
         </nav>
     </header>
 
