--- a/project1.html
+++ b/project1.html
@@ -11,7 +11,6 @@
 <body>
     <header>
         <h1>Annabel Morales</h1>
-
         <nav class="header-nav">
             <a class="header-li inactive" href="index.html">Home</a>
             <a class="header-li inactive" href="about.html">About</a>
@@ -19,17 +18,16 @@
                 <a class="header-li active dropdown-btn" href="projects.html">Projects</a>
                 <div class="dropdown-menu">
                     <a class="on project" href="project1.html">Culinary Roulette</a>
-                    <a class="off project" href="#">Pawsome Eats</a>
-                    <a class="off project" href="#">Book Cover</a>
-                    <a class="off project" href="#">Noah Franklin...</a>
-                    <a class="off project" href="#">Noted</a>
-                    <a class="off project" href="#">The Mysterious...</a>
-                    <a class="off project" href="#">Media Player</a>
+                    <a class="off project" href="project2.html">Pawsome Eats</a>
+                    <a class="off project" href="project3.html">Book Cover</a>
+                    <a class="off project" href="project4.html">Noah Franklin...</a>
+                    <a class="off project" href="project5.html">Noted</a>
+                    <a class="off project" href="project6.html">The Mysterious...</a>
+                    <a class="off project" href="project7.html">Media Player</a>
                 </div>
             </div>
             <a class="header-li inactive" href="contact.html">Contact</a>
         </nav>
-       
     </header>
 
     <section class="welcome details">
