projects1 css and images

--- a/index.html
+++ b/index.html
@@ -46,32 +46,32 @@
 
             <div class="slider">
                 <div class="item">
-                    <img src="images/app1.png" alt="Preview of Culinary Roulette Web Page">
-                    <figcaption><a href="project1.html">Culinary Roulette</a></figcaption>
+                    <img class="img1" src="images/app1.png" alt="Preview of Culinary Roulette Web Page">
+                    <a class="title" href="project1.html">Culinary Roulette</a>
                 </div>
                 <div class="item">
-                    <img src="images/pawsome1.png" alt="Preview of Pawsome Eats Project Brief">
-                    <figcaption><a href="project2.html">Pawsome Eats</a></figcaption>
+                    <img class="img1" src="images/pawsome1.png" alt="Preview of Pawsome Eats Project Brief">
+                    <a class="title" href="project2.html">Pawsome Eats</a>
                 </div>
                 <div class="item">
-                    <img src="images/book1.png" alt="Preview of Book Cover Project">
-                    <figcaption><a href="project3.html">Book Cover</a></figcaption>
+                    <img class="img1" src="images/book1.png" alt="Preview of Book Cover Project">
+                    <a class="title" href="project3.html">Book Cover</a>
                 </div>
                 <div class="item">
-                    <img src="images/bnb1.png" alt="Preview of Bed and Breakfast Website">
-                    <figcaption><a href="project4.html">Noah Franklin Homestead</a></figcaption>
+                    <img class="img1" src="images/bnb1.png" alt="Preview of Bed and Breakfast Website">
+                    <a class="title" href="project4.html">Noah Franklin Homestead</a>
                 </div>
                 <div class="item">
-                    <img src="images/noted1.png" alt="Preview of Noted Project Brief">
-                    <figcaption><a href="project5.html">Noted</a></figcaption>
+                    <img class="img1" src="images/noted1.png" alt="Preview of Noted Project Brief">
+                    <a class="title" href="project5.html">Noted</a>
                 </div>
                 <div class="item">
-                    <img src="images/zine1.png" alt="Preview of Zine Comic">
-                    <figcaption><a href="project6.html">Book Zine</a></figcaption>
+                    <img class="img1" src="images/zine1.png" alt="Preview of Zine Comic">
+                    <a class="title" href="project6.html">Book Zine</a>
                 </div>
                 <div class="item">
-                    <img src="images/media1.png" alt="Preview of Media Player Webpage">
-                    <figcaption><a href="project7.html">Media Player</a></figcaption>
+                    <img class="img1" src="images/media1.png" alt="Preview of Media Player Webpage">
+                    <a class="title" href="project7.html">Media Player</a>
                 </div>
             </div>
             
