--- a/project1.html
+++ b/project1.html
@@ -17,13 +17,13 @@
             <div class="dropdown">
                 <a class="header-li active dropdown-btn" href="projects.html">Projects</a>
                 <div class="dropdown-menu">
-                    <a class="on project" href="project1.html">Culinary Roulette</a>
-                    <a class="off project" href="project2.html">Pawsome Eats</a>
-                    <a class="off project" href="project3.html">Book Cover</a>
-                    <a class="off project" href="project4.html">Noah Franklin...</a>
-                    <a class="off project" href="project5.html">Noted</a>
-                    <a class="off project" href="project6.html">The Mysterious...</a>
-                    <a class="off project" href="project7.html">Media Player</a>
+                    <a class="on n" href="project1.html">Culinary Roulette</a>
+                    <a class="off" href="project2.html">Pawsome Eats</a>
+                    <a class="off" href="project3.html">Book Cover</a>
+                    <a class="off" href="project4.html">Noah Franklin...</a>
+                    <a class="off" href="project5.html">Noted</a>
+                    <a class="off" href="project6.html">The Mysterious...</a>
+                    <a class="off" href="project7.html">Media Player</a>
                 </div>
             </div>
             <a class="header-li inactive" href="contact.html">Contact</a>
@@ -33,10 +33,44 @@
     <section class="welcome details">
         <h2>Culinary Roulette</h2>
         <h3 class="date">December 2023</h3>
-        <div>
-            <h4>About This Project</h4>
+        <div class="container">
+            <div>
+                <h4>About This Project</h4>
+                <p>This project is from my web design class in the fall semester of 2023. I was given the assignment to create a custom web app that collects remote data and meaningfully processes it for a targeted audience. I thought of a fun way to use a recipe API and create a recipe generator that gives the user a recipe based on the category they choose.</p>
+                <h4>Skills Used</h4>
+                <ul class="skills">
+                    <li>Web Design/Development</li>
+                    <li>Mobile/Responsive Design</li>
+                    <li>JavaScript</li>
+                    <li>CSS</li>
+                    <li>APIs</li>
+                </ul>
+            </div>
 
-            <h4>Skills</h4>
+            <div>
+                <h4>Explore This Project</h4>
+                    <div class="slider s2">
+                        <div class="item">
+                            <img class="img2" src="images/app1.png" alt="Landing page">
+                            <figcaption class="functions">Landing Page</figcaption>
+                        </div>
+                        <div class="item">
+                            <img class="img2" src="images/app2.png" alt="Choosing a category">
+                            <figcaption class="functions">Choosing a category</figcaption>
+                        </div>
+                        <div class="item">
+                            <img class="img2" src="images/app3.png" alt="Result from pressing green button">
+                            <figcaption class="functions">Result from pressing "Find Random Recipe" button</figcaption>
+                        </div>
+                        <div class="item">
+                            <img class="img2" src="images/app4.png" alt="Full view of given recipe">
+                            <figcaption class="functions">Full view of given recipe</figcaption>
+                        </div>
+                    </div>
+
+                    <a class="visit-btn" href="http://mrls.infinityfreeapp.com/artdm174/projects/project4">Visit Site</a>
+
+            </div>
         </div>
     </section>
 
@@ -54,5 +88,16 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('.slider').slick({
+            infinite: true,
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            speed: 500,
+            infinite: true,
+            });})
+    </script>
 </body>
 </html>
