--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                     <input type="text" id="subject" name="subject" required>
 
                     <label for="message">Message <span>*</span></label>
-                    <textarea type="text" id="message" name="message" required></textarea>
+                    <textarea id="message" name="message" required></textarea>
 
                     <input type="submit" value="Submit">
                 </form>
