--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="item">
                     <img class="img1" src="images/bnb1.png" alt="Preview of Bed and Breakfast Website">
-                    <a class="title" href="project4.html">Noah Franklin Homestead</a>
+                    <a class="title" href="project4.html">Bed & Breakfast</a>
                 </div>
                 <div class="item">
                     <img class="img1" src="images/noted1.png" alt="Preview of Noted Project Brief">
