--- a/project1.html
+++ b/project1.html
@@ -52,19 +52,19 @@
                     <div class="slider s2">
                         <div class="item">
                             <img class="img2" src="images/app1.png" alt="Landing page">
-                            <figcaption class="functions">Landing Page</figcaption>
+                            <p class="functions">Landing Page</p>
                         </div>
                         <div class="item">
                             <img class="img2" src="images/app2.png" alt="Choosing a category">
-                            <figcaption class="functions">Choosing a category</figcaption>
+                            <p class="functions">Choosing a category</p>
                         </div>
                         <div class="item">
                             <img class="img2" src="images/app3.png" alt="Result from pressing green button">
-                            <figcaption class="functions">Result from pressing "Find Random Recipe" button</figcaption>
+                            <p class="functions">Result from pressing "Find Random Recipe" button</p>
                         </div>
                         <div class="item">
                             <img class="img2" src="images/app4.png" alt="Full view of given recipe">
-                            <figcaption class="functions">Full view of given recipe</figcaption>
+                            <p class="functions">Full view of given recipe</p>
                         </div>
                     </div>
 
