--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
                 <h3>Culinary Roulette</h3>
                 <div class="flex">
                     <p>This is a fun project creating a custom web app that serves as recipe generator based on category filters.</p>
-                    <button class="view-btn"><a href="project1.html">View Details</a></button>
+                    <a class="view-btn" href="project1.html">View Details</a>
                 </div>
             </div>
 
@@ -48,7 +48,7 @@
                 <h3>Pawsome Eats App</h3>
                 <div class="flex">
                     <p>This is app idea that provides recipes for dog and cat owners for their pets. This project includes a pitch deck, an app prototype, and a support website.</p>
-                    <button class="view-btn"><a href="project2.html">View Details</a></button>
+                    <a class="view-btn" href="project2.html">View Details</a>
                 </div>
             </div>
 
@@ -57,7 +57,7 @@
                 <h3>Book Cover</h3>
                 <div class="flex">
                     <p>This is a reimaged book cover project of <i>Alice's Adventures in Wonderland</i> by Lewis Carrol.</p>
-                    <button class="view-btn"><a href="project3.html">View Details</a></button>
+                    <a class="view-btn" href="project3.html">View Details</a>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                 <h3>Noah Franklin Homestead - Bed and Breakfast</h3>
                 <div class="flex">
                     <p>This is a multi-page website for a fictional bed and breakfast inn.</p>
-                    <button class="view-btn"><a href="project4.html">View Details</a></button>
+                    <a class="view-btn" href="project4.html">View Details</a>
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
                 <h3>Noted</h3>
                 <div class="flex">
                     <p>This is an app idea providing a student-focused calendar and planner. This project includes a pitch deck and an app prototype.</p>
-                    <button class="view-btn"><a href="project5.html">View Details</a></button>
+                    <a class="view-btn" href="project5.html">View Details</a>
                 </div>
             </div>
 
@@ -84,7 +84,7 @@
                 <h3>The Mysterious Myths And Legends of Latin America</h3>
                 <div class="flex">
                     <p>This is book zine I created that explores popular folklore in Latin America. This project was created using paper-to-digital illustrations and various tools on Adobe Illustrator.</p>
-                    <button class="view-btn"><a href="project5.html">View Details</a></button>
+                    <a class="view-btn" href="project6.html">View Details</a>
                 </div>
             </div>
 
@@ -93,7 +93,7 @@
                 <h3>Media Player</h3>
                 <div class="flex">
                     <p>This is a project focusing on using captions, triggers on time stamps, video, and audio.</p>
-                    <button class="view-btn"><a href="project6.html">View Details</a></button>
+                    <a class="view-btn" href="project7.html">View Details</a>
                 </div>
             </div>
             
