--- a/about.html
+++ b/about.html
@@ -32,8 +32,12 @@
     <main>
         <section class="welcome">
             <h2>Learn More About Me</h2>
-            <div class="flex"> 
-                <p>My name is Annabel Morales and I am an undergraduate student. I have learned many skills regarding web design/development, ux/ui design, and graphic design in the past two years. I also have knowledge and experience in photography and digital media. My skills and strengths can be seen in my projects.</p>
+            <div class="flex bio-container"> 
+                <div class="bio">
+                    <p>My name is Annabel Morales and I am an undergraduate student. I have learned many skills regarding web design/development, ux/ui design, and graphic design in the past two years. I also have knowledge and experience in photography and digital media. My skills and strengths can be seen in my projects.</p>
+
+                    <p>I hope to attract employers in this creative industry and be able to bring my skills and strengths to a company's goals. I am currently looking for internships to get my foot into this industry.</p>
+                </div>
             
                 <img class="memoji" src="images/memoji.png" alt="My Memoji">
             </div>
