--- a/project1.html
+++ b/project1.html
@@ -34,17 +34,21 @@
         <h2>Culinary Roulette</h2>
         <h3 class="date">December 2023</h3>
         <div class="container">
-            <div>
-                <h4>About This Project</h4>
-                <p>This project is from my web design class in the fall semester of 2023. I was given the assignment to create a custom web app that collects remote data and meaningfully processes it for a targeted audience. I thought of a fun way to use a recipe API and create a recipe generator that gives the user a recipe based on the category they choose.</p>
-                <h4>Skills Used</h4>
-                <ul class="skills">
-                    <li>Web Design/Development</li>
-                    <li>Mobile/Responsive Design</li>
-                    <li>JavaScript</li>
-                    <li>CSS</li>
-                    <li>APIs</li>
-                </ul>
+            <div class="container-flex">
+                <div class="flex-div">
+                    <h4>About This Project</h4>
+                    <p>This project is from my web design class in the fall semester of 2023. I was given the assignment to create a custom web app that collects remote data and meaningfully processes it for a targeted audience. I thought of a fun way to use a recipe API and create a recipe generator that gives the user a recipe based on the category they choose.</p>
+                </div>
+                <div class="skills-container">
+                    <h4>Skills Used</h4>
+                    <ul class="skills">
+                        <li>Web Design/Development</li>
+                        <li>Mobile/Responsive Design</li>
+                        <li>JavaScript</li>
+                        <li>CSS</li>
+                        <li>APIs</li>
+                    </ul>
+                </div>
             </div>
 
             <div>
@@ -69,7 +73,6 @@
                     </div>
 
                     <a class="visit-btn" href="http://mrls.infinityfreeapp.com/artdm174/projects/project4">Visit Site</a>
-
             </div>
         </div>
     </section>
