individual project pages

--- a/project3.html
+++ b/project3.html
@@ -37,19 +37,15 @@
             <div class="container-flex">
                 <div class="flex-div">
                     <h4>About This Project</h4>
-                    <p>This project is from my digital interface design class in the spring semester of 2023. I was given the assignment to pitch an app idea with the purpose of helping a community. I chose to create an app that will benefit the health of cats and dogs by introducing their owners to nutritious recipes. This project includes a pitch deck, prototype, and support website that was all created in Figma.</p>
+                    <p>This project is from my graphic design class in the fall semester of 2022. I was given the assignment to design your own book cover for a book of your choice. I chose <i>Alice's Adventures In Wonderland</i> by Lewis Carroll and I focused on the Red Queen's garden for the book cover design. I took photos of all of the props. I used a sheet of moss as the background and a piece of glass to tape the playing cards on and to create a shadow to make the illusion of them falling. I painted the artificial white roses with red paint as a reference to a popular scene in the book. I used Adobe Photoshop to enhance the photos I took and add the necessecary text and publication images a book cover includes. I also used the application to make a 3D mockup of the design.</p>
                 </div>
                 <div class="skills-container">
                     <h4>Skills Used</h4>
                     <ul class="skills">
-                        <li>Figma</li>
-                        <li>User Experience/Interaction Design</li>
+                        <li>Adobe Photoshop</li>
+                        <li>Photography</li>
                         <li>Graphic Design</li>
-                        <li>Prototyping</li>
-                        <li>Wireframing</li>
                         <li>Principles of Design</li>
-                        <li>Web Design</li>
-                        <li>Presentation Skills</li>
                     </ul>
                 </div>
             </div>
@@ -58,24 +54,15 @@
                 <h4>Explore This Project</h4>
                     <div class="slider s2">
                         <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
+                            <img class="img2" src="images/book1.png" alt="Book Cover">
+                            <p class="functions">Book Cover</p>
                         </div>
                         <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
-                        </div>
-                        <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
-                        </div>
-                        <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
+                            <img class="img2" src="images/book2.png" alt="Book Cover Mockup">
+                            <p class="functions">Book Cover Mockup</p>
                         </div>
                     </div>
 
-                    <a class="visit-btn2" href="https://www.figma.com/proto/o3OY97tbn7wRH1rvXnrxZm/Morales-Term-Project?type=design&node-id=2-2&t=bVzItX5sRa4J0mrB-1&scaling=contain&page-id=0%3A1&mode=design">Visit Pitch Deck</a>
             </div>
         </div>
     </section>
