--- a/project4.html
+++ b/project4.html
@@ -37,19 +37,18 @@
             <div class="container-flex">
                 <div class="flex-div">
                     <h4>About This Project</h4>
-                    <p>This project is from my digital interface design class in the spring semester of 2023. I was given the assignment to pitch an app idea with the purpose of helping a community. I chose to create an app that will benefit the health of cats and dogs by introducing their owners to nutritious recipes. This project includes a pitch deck, prototype, and support website that was all created in Figma.</p>
+                    <p>This project is from my web design class in the spring semester of 2023. I was given the assignment to create a multi-page website for a ficitional bed and breakfast inn called Noah Franklin Homestead. I was provided with the content that includes images, room details, special deals, and contact information and I had to plan out how I would present each piece of content through wireframes and style tiles.</p>
                 </div>
                 <div class="skills-container">
                     <h4>Skills Used</h4>
                     <ul class="skills">
                         <li>Figma</li>
                         <li>User Experience/Interaction Design</li>
-                        <li>Graphic Design</li>
-                        <li>Prototyping</li>
                         <li>Wireframing</li>
-                        <li>Principles of Design</li>
-                        <li>Web Design</li>
-                        <li>Presentation Skills</li>
+                        <li>Style Tiles</li>
+                        <li>CSS</li>
+                        <li>Web Design/Development</li>
+                        <li>Mobile/Responsive Design</li>
                     </ul>
                 </div>
             </div>
@@ -58,24 +57,38 @@
                 <h4>Explore This Project</h4>
                     <div class="slider s2">
                         <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
+                            <img class="img2" src="images/bnb1.png" alt="Landing Page">
+                            <p class="functions">Landing Page</p>
                         </div>
                         <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
+                            <img class="img2" src="images/bnb2.png" alt="Style Tiles">
+                            <p class="functions">Style Tiles</p>
                         </div>
                         <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
+                            <img class="img2" src="images/bnb3.png" alt="Wireframe of Room 1">
+                            <p class="functions">Wireframe of Room 1</p>
                         </div>
                         <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
+                            <img class="img2" src="images/bnb4.png" alt="Room 1 Page">
+                            <p class="functions">Room 1 Page</p>
+                        </div>
+                        <div class="item">
+                            <img class="img2" src="images/bnb5.png" alt="Accommodations Page">
+                            <p class="functions">Accommodations Page</p>
+                        </div>
+                        <div class="item">
+                            <img class="img2" src="images/bnb6.png" alt="Accommodations Page">
+                            <p class="functions">Specials Page</p>
+                        </div>
+                        <div class="item">
+                            <img class="img2" src="images/bnb7.png" alt="Accommodations Page">
+                            <p class="functions">Contact Page</p>
                         </div>
                     </div>
 
-                    <a class="visit-btn2" href="https://www.figma.com/proto/o3OY97tbn7wRH1rvXnrxZm/Morales-Term-Project?type=design&node-id=2-2&t=bVzItX5sRa4J0mrB-1&scaling=contain&page-id=0%3A1&mode=design">Visit Pitch Deck</a>
+                    <a class="visit-btn2" href="http://mrls.infinityfreeapp.com/artdm171/projects/project5/">Visit Site</a>
+                    <a class="visit-btn2" href="http://mrls.infinityfreeapp.com/artdm171/projects/project4/">Visit Wireframes</a>
+                    <a  class="visit-btn2" href="https://www.figma.com/file/JUzemuUsBaw3vl7gq0lY0v/StyleTiles?type=design&node-id=201%3A2&mode=design&t=fW2dR2aOAs7ROUFu-1">Visit Style Tiles</a>
             </div>
         </div>
     </section>
