--- a/project5.html
+++ b/project5.html
@@ -37,7 +37,7 @@
             <div class="container-flex">
                 <div class="flex-div">
                     <h4>About This Project</h4>
-                    <p>This project is from my digital interface design class in the spring semester of 2023. I was given the assignment to pitch an app idea with the purpose of helping a community. I chose to create an app that will benefit the health of cats and dogs by introducing their owners to nutritious recipes. This project includes a pitch deck, prototype, and support website that was all created in Figma.</p>
+                    <p>This project is from my user experience design class in the fall semester of 2023. I was given the assignment to pitch an app idea with the purpose of helping a community. I chose to create an app that will cater towards students and create a planner app for their assignments. This project includes a pitch deck and a prototype that was all created in Figma.</p>
                 </div>
                 <div class="skills-container">
                     <h4>Skills Used</h4>
@@ -48,7 +48,6 @@
                         <li>Prototyping</li>
                         <li>Wireframing</li>
                         <li>Principles of Design</li>
-                        <li>Web Design</li>
                         <li>Presentation Skills</li>
                     </ul>
                 </div>
@@ -58,24 +57,45 @@
                 <h4>Explore This Project</h4>
                     <div class="slider s2">
                         <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
+                            <img class="img2" src="images/noted1.png" alt="Cover Slide">
+                            <p class="functions">Cover Slide</p>
                         </div>
                         <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
+                            <img class="img2" src="images/noted2.png" alt="Design Brief">
+                            <p class="functions">Design Brief</p>
                         </div>
                         <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
+                            <img class="img2" src="images/noted3.png" alt="Research">
+                            <p class="functions">Research</p>
                         </div>
                         <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
+                            <img class="img2" src="images/noted4.png" alt="Persona">
+                            <p class="functions">Persona</p>
+                        </div>
+                        <div class="item">
+                            <img class="img2" src="images/noted5.png" alt="Style Tile">
+                            <p class="functions">Style Tile</p>
+                        </div>
+                        <div class="item">
+                            <img class="img2" src="images/noted6.png" alt="Wireframes and Mockup">
+                            <p class="functions">Wireframes and Mockup</p>
+                        </div>
+                        <div class="item">
+                            <img class="img2" src="images/noted7.png" alt="A/B Testing">
+                            <p class="functions">A/B Testing</p>
+                        </div>
+                        <div class="item">
+                            <img class="img2" src="images/noted8.png" alt="Analytics">
+                            <p class="functions">Analytics</p>
+                        </div>
+                        <div class="item">
+                            <img class="img2" src="images/noted9.png" alt="Prototype">
+                            <p class="functions">Prototype</p>
                         </div>
                     </div>
 
-                    <a class="visit-btn2" href="https://www.figma.com/proto/o3OY97tbn7wRH1rvXnrxZm/Morales-Term-Project?type=design&node-id=2-2&t=bVzItX5sRa4J0mrB-1&scaling=contain&page-id=0%3A1&mode=design">Visit Pitch Deck</a>
+                    <a class="visit-btn2" href="https://www.figma.com/proto/QcB3NTTUMDkDAPMooXNM2z/Annabel-Morales---App-Prototype?type=design&node-id=75-5&t=acWFC3A1ovpDJRtk-1&scaling=contain&page-id=0%3A1&mode=design">Visit Pitch Deck</a>
+                    <a class="visit-btn2" href="https://www.figma.com/proto/QcB3NTTUMDkDAPMooXNM2z/Annabel-Morales---App-Prototype?type=design&node-id=34-3&t=vE8VnEBNMEkLx6gT-1&scaling=scale-down&page-id=34%3A2&starting-point-node-id=34%3A3&mode=design">Visit Prototype</a>
             </div>
         </div>
     </section>
