--- a/project6.html
+++ b/project6.html
@@ -37,45 +37,63 @@
             <div class="container-flex">
                 <div class="flex-div">
                     <h4>About This Project</h4>
-                    <p>This project is from my digital interface design class in the spring semester of 2023. I was given the assignment to pitch an app idea with the purpose of helping a community. I chose to create an app that will benefit the health of cats and dogs by introducing their owners to nutritious recipes. This project includes a pitch deck, prototype, and support website that was all created in Figma.</p>
+                    <p>This project is from my digital illustration class in the spring semester of 2023. I was given the assignment to create a zine comic with the topic of my choice. Along with preknown knowledge, I researched additional information of the Latin American myths and legends I chose for this project. I drew the illustrations on paper first and scanned them digitally to be able to add details and color on Adobe Illustrator. I also used Adobe Illustrator to add typography, images, and additional illustrations/graphics.</p>
                 </div>
-                <div class="skills-container">
-                    <h4>Skills Used</h4>
-                    <ul class="skills">
-                        <li>Figma</li>
-                        <li>User Experience/Interaction Design</li>
-                        <li>Graphic Design</li>
-                        <li>Prototyping</li>
-                        <li>Wireframing</li>
-                        <li>Principles of Design</li>
-                        <li>Web Design</li>
-                        <li>Presentation Skills</li>
-                    </ul>
+                <div class="block2">
+                    <div class="skills-container">
+                        <h4>Skills Used</h4>
+                        <ul class="skills">
+                            <li>Adobe Illustrator</li>
+                            <li>Graphic Design</li>
+                            <li>Drawing</li>
+                            <li>Principles of Design</li>
+                            <li>Storytelling</li>
+                        </ul>
+                    </div>
+
+                    <div class="skills-container">
+                        <h4>Award</h4>
+                        <ul class="skills">
+                            <li>James O’Keefe Comic/Zine Contest 2024 - Los Bros Hernandez Award</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
             <div>
                 <h4>Explore This Project</h4>
-                    <div class="slider s2">
-                        <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
-                        </div>
-                        <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
-                        </div>
-                        <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
-                        </div>
-                        <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
-                        </div>
+                <div class="slider s2">
+                    <div class="item">
+                        <img class="img2" src="images/zine2.png" alt="">
+                        <p class="functions"></p>
                     </div>
+                    <div class="item">
+                        <img class="img2" src="images/zine3.png" alt="">
+                        <p class="functions"></p>
+                    </div>
+                    <div class="item">
+                        <img class="img2" src="images/zine4.png" alt="">
+                        <p class="functions"></p>
+                    </div>
+                    <div class="item">
+                        <img class="img2" src="images/zine5.png" alt="">
+                        <p class="functions"></p>
+                    </div>
+                    <div class="item">
+                        <img class="img2" src="images/zine6.png" alt="">
+                        <p class="functions"></p>
+                    </div>
+                    <div class="item">
+                        <img class="img2" src="images/zine7.png" alt="">
+                        <p class="functions"></p>
+                    </div>
+                    <div class="item">
+                        <img class="img2" src="images/zine8.png" alt="">
+                        <p class="functions"></p>
+                    </div>
+                </div>
 
-                    <a class="visit-btn2" href="https://www.figma.com/proto/o3OY97tbn7wRH1rvXnrxZm/Morales-Term-Project?type=design&node-id=2-2&t=bVzItX5sRa4J0mrB-1&scaling=contain&page-id=0%3A1&mode=design">Visit Pitch Deck</a>
+                <a class="visit-btn2" href="https://dvcartgallery.com/2024-comic-contest-winners">Visit Awards Page</a>
             </div>
         </div>
     </section>
