--- a/project7.html
+++ b/project7.html
@@ -37,19 +37,16 @@
             <div class="container-flex">
                 <div class="flex-div">
                     <h4>About This Project</h4>
-                    <p>This project is from my digital interface design class in the spring semester of 2023. I was given the assignment to pitch an app idea with the purpose of helping a community. I chose to create an app that will benefit the health of cats and dogs by introducing their owners to nutritious recipes. This project includes a pitch deck, prototype, and support website that was all created in Figma.</p>
+                    <p>This project is from my web design with JavaScript class in the fall semester of 2023. I was given the assignment to create a webpage containing a media player displaying captions, triggers on time stamps, and playback controls. I decided to take a music preformance from a Victoria's Secret Fashion Show to present wikipedia pages of the models as they walk down the runway. The music preformance by Rihanna adds an entertainment aspect as the wikipedia pages add an informational aspect.</p>
                 </div>
                 <div class="skills-container">
                     <h4>Skills Used</h4>
                     <ul class="skills">
-                        <li>Figma</li>
-                        <li>User Experience/Interaction Design</li>
-                        <li>Graphic Design</li>
-                        <li>Prototyping</li>
-                        <li>Wireframing</li>
-                        <li>Principles of Design</li>
-                        <li>Web Design</li>
-                        <li>Presentation Skills</li>
+                        <li>Web Design/Development</li>
+                        <li>Mobile/Responsive Design</li>
+                        <li>JavaScript</li>
+                        <li>CSS</li>
+                        <li>Video and Audio</li>
                     </ul>
                 </div>
             </div>
@@ -58,24 +55,16 @@
                 <h4>Explore This Project</h4>
                     <div class="slider s2">
                         <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
+                            <img class="img2" src="images/media1.png" alt="Landing Page">
+                            <p class="functions">Landing Page</p>
                         </div>
                         <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
-                        </div>
-                        <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
-                        </div>
-                        <div class="item">
-                            <img class="img2" src="" alt="">
-                            <p class="functions"></p>
+                            <img class="img2" src="images/media1.png" alt="Snapshot of Video Playing">
+                            <p class="functions">Snapshot of Video Playing</p>
                         </div>
                     </div>
 
-                    <a class="visit-btn2" href="https://www.figma.com/proto/o3OY97tbn7wRH1rvXnrxZm/Morales-Term-Project?type=design&node-id=2-2&t=bVzItX5sRa4J0mrB-1&scaling=contain&page-id=0%3A1&mode=design">Visit Pitch Deck</a>
+                    <a class="visit-btn2" href="https://annabelxmrls.github.io/project3/">Visit Site</a>
             </div>
         </div>
     </section>
